2003-08-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* xml.pl.in: made it to ignore any whitespace or carriage return
	  at the beginning of the xml when parsing

2003-08-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* general.pl.in: added a carriage return for synchronism with the
	  frontend

2003-07-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in: s/Mandrake\ Linux/Linux\ Mandrake/ in PLATFORM_INFO,
	and made MDK 9.1 codename "Bamboo". Fixes bug #116864

2003-06-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in, platform.pl.in, runlevel-conf.in,
	service.pl.in, time-conf.in, users-conf.in: s/redhat\-9\.0/redhat\-9/,
	because it's in this way in /etc/redhat-release, there won't appear
	the distro selection window anymore in redhat9 :-P
	* network.pl.in: (gst_network_ensure_loopback_interface): removed
	loobpack in redhat9, it isn't really neccesary (I'm even thinking about
	removing loopback support at all in GST) and broke the redhat network
	tool. Fixes #114044
	(gst_network_rh72_get_file): made it to create the interface filename
	with the "dev" tag instead of the "name" tag (for RH >=7.2)

2003-06-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: added the possibility of dialing to an external line

2003-06-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: made it not to remove the root parameter from 
	the append data

2003-06-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in, boot.pl.in: fix path problems when the kernel
	image is in a mount point different to /

2003-06-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* backends/boot-grub.pl.in, boot.pl.in: made grub path-aware when 
	/boot is a partition. fixes #113687 and #106997

2003-05-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: added a comma, now the time tool backend works again
	:-(
